# qwen-test-runner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/caption-processor/: SKILL.md
qwen_test_runner/: __init__.py  data_gen.py  evaluator.py  model_runner.py  registry.py  run_benchmark.py  schema.py
qwen_test_runner/providers/: __init__.py  claude_api.py
qwen_test_runner/src/: __init__.py  eval_set.py  model_runner.py  run_benchmark.py
qwen_test_runner/tests/: test_evaluator.py
tests/: test_data_gen.py  test_evaluator.py  test_registry.py
